compreview/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-do480
  labels:
    app: hello-do480
    name: hello-do480
  namespace: compreview-install
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-do480
      name: hello-do480
  template:
    metadata:
      labels:
        app: hello-do480
        name: hello-do480
    spec:
      containers:
      - name: hello-do480
        image: central-quay-registry.apps.ocp4.example.com/cloudadmin/hello-app:v111
---
