compreview/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-do480
  labels:
    app: hello-do480
    name: hello-do480
  namespace: compreview-install
spec:
  host: hello-do480.apps.ocp4-mng.example.com
  subdomain: ''
  to:
    kind: Service
    name: hello-do480
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
---
